# eaql

./: Cargo.toml  README.md
.github/actions/: build.yaml
.github/workflows/: code-format.yaml  doc-tests.yaml  integration-tests.yaml  tests.yaml  unit-tests.yaml
docs/: DOCUMENTATION.md
docs/architecture/: ARCHITECTURE.md  CONDITIONAL.md  EAQL.ebnf
docs/eaql/: PARSER.md  SYNTAX.ebnf  SYNTAX.md
docs/eaql/architecture/: CONDITIONAL.md  EAQL.ebnf  PARSING.md  SCANNING.md  TRANSPILING.md
docs/eaql/usage/: TABLE_ACCESING.md  USAGE.md
docs/usage/: DATABASE.md  TABLE_ACCESING.md  USAGE.md
src/: lib.rs  main.rs
src/eaql/: ast.rs  eaql.rs  lexer.rs  mod.rs  pprint.rs  repl.rs  tokens.rs  transpiler.rs
src/eaql/language/: lexer.rs  mod.rs  tokens.rs
src/eaql/language/parser/: conditional.rs  database.rs  get.rs  helpers.rs  mod.rs  parser.rs  postprocessor.rs
src/eaql/parser/: conditional.rs  conditional_original.rs  get.rs  helpers.rs  mod.rs  notes.txt  parser.rs  pseudocode.txt
src/eaql/tester/: tester.rs
src/eaql/transpiler/: transpiler.rs
src/language/: lexer.rs  mod.rs  tokens.rs
src/language/parser/: conditional.rs  database.rs  get.rs  helpers.rs  mod.rs  parser.rs  postprocessor.rs
src/transpiler/: mod.rs  transpiler.rs
src/utils/: colors.rs  help.rs  io.rs  logger.rs  mod.rs  query.rs
src/validator/: mod.rs  validator.rs
tests/: transpiler_tests.rs  validator_tests.rs
