[package]
name = "eaql"
version = "0.0.1"
authors = ["Matthew Hambrecht"]
edition = "2024"
readme = "README.md"
description = "An English-like query language and SQL transpiler."
repository = "https://github.com/matthambrecht/eaql"
license = "GPL-3.0-or-later"
categories = ["language", "transpiler", "eduactional"]

[[bin]]
name = "repl"
path = "src/bin/repl.rs"

[lib]
name = "eaql"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
lazy_static = "1.4"